--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.7</version>
@@ -109,10 +114,17 @@
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>prepare-package</phase>
+                        <phase>test</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <configuration>
+                            <outputDirectory>${project.basedir}/.qodana/code-coverage/</outputDirectory>
+                            <formats>XML</formats>
+                            <includes>
+                                <include>org/example/**</include>
+                            </includes>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
