--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -1,25 +1,50 @@
-name: Qodana
+name: JaCoCo Agent - Maven Test
+
 on:
   workflow_dispatch:
   pull_request:
   push:
-    branches: # Specify your branches here
-      - main # The 'main' branch
-      - 'releases/*' # The release branches
+    branches:
+      - main
+      - 'releases/*'
 
 jobs:
-  qodana:
+  build:
+
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-      checks: write
+
     steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
-          fetch-depth: 0  # a full history is required for pull request analysis
-      - name: 'Qodana Scan'
-        uses: JetBrains/qodana-action@v2023.3
-        env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+    - name: Checkout Code
+      uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
+        fetch-depth: 0
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
+      with:
+        java-version: '17'
+        distribution: 'adopt'
+        cache: 'maven'
+
+    - name: Validate Maven Wrapper
+      run: mvn --version
+      working-directory: JVM/jacoco/maven
+
+    - name: Run Tests
+      run: mvn test
+      working-directory: JVM/jacoco/maven
+      
+    - name: Archive coverage data
+      uses: actions/upload-artifact@v2
+      with:
+        name: maven-coverage-data-jacoco
+        path: JVM/jacoco/maven/.qodana/code-coverage
+
+    - name: Qodana Scan
+      uses: JetBrains/qodana-action@main
+      env:
+        QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_MVN_JACOCO }}
+      with:
+        args: "-i,JVM/jacoco/maven,--linter,jetbrains/qodana-jvm:2023.3-eap"
+        pr-mode: false
