--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -29,17 +29,17 @@ jobs:
 
     - name: Validate Maven Wrapper
       run: mvn --version
-      working-directory: JVM/jacoco/maven
+      working-directory: /
 
     - name: Run Tests
       run: mvn test
-      working-directory: JVM/jacoco/maven
+      working-directory: /
       
     - name: Archive coverage data
       uses: actions/upload-artifact@v2
       with:
         name: maven-coverage-data-jacoco
-        path: JVM/jacoco/maven/.qodana/code-coverage
+        path: .qodana/code-coverage
 
     - name: Qodana Scan
       uses: JetBrains/qodana-action@main
