--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -29,11 +29,11 @@ jobs:
 
     - name: Validate Maven Wrapper
       run: mvn --version
-      working-directory: /
+      working-directory: JVM/jacoco/maven
 
     - name: Run Tests
       run: mvn test
-      working-directory: /
+      working-directory: JVM/jacoco/maven
       
     - name: Archive coverage data
       uses: actions/upload-artifact@v2
