--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -29,11 +29,11 @@ jobs:
 
     - name: Validate Maven Wrapper
       run: mvn --version
-      working-directory: JVM/jacoco/maven
+      working-directory: 
 
     - name: Run Tests
       run: mvn test
-      working-directory: JVM/jacoco/maven
+      working-directory: 
       
     - name: Archive coverage data
       uses: actions/upload-artifact@v2
@@ -46,5 +46,5 @@ jobs:
       env:
         QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_MVN_JACOCO }}
       with:
-        args: "-i,JVM/jacoco/maven,--linter,jetbrains/qodana-jvm:2023.3-eap"
+        args: "-i,,--linter,jetbrains/qodana-jvm:2023.3-eap"
         pr-mode: false
