--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -46,5 +46,5 @@ jobs:
       env:
         QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_MVN_JACOCO }}
       with:
-        args: "-i,,--linter,jetbrains/qodana-jvm:2023.3-eap"
+        args: "-i,,--linter,jetbrains/qodana-jvm:2023.3"
         pr-mode: false
