--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -42,7 +42,7 @@ jobs:
         path: .qodana/code-coverage
 
     - name: Qodana Scan
-      uses: JetBrains/qodana-action@v2023.3-eap
+      uses: JetBrains/qodana-action@v2023.3
       env:
         QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
       with:
