--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -1,53 +1,51 @@
-
-name: CI
+name: JaCoCo Agent - Maven Tests
 
 on:
+  workflow_dispatch:
+  pull_request:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+      - 'releases/*'
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup JDK
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
-      - name: Build & Test
-        run: ./gradlew clean build test
-      - name: Upload build folder
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: build/reports/jacoco/code-coverage
-  static-analysis:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: write
-      pull-requests: write
-      checks: write
-    steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
-      - name: Download build folder
-        uses: actions/download-artifact@v4
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          name: coverage-report
+          java-version: '11'
+          distribution: 'adopt'
+          cache: 'maven'
+
+      - name: Validate Maven Wrapper
+        run: mvn --version
+        working-directory: JVM/jacoco/maven
+
+      - name: Run Tests
+        run: mvn test
+        working-directory: JVM/jacoco/maven
+
+      - name: Archive coverage data
+        uses: actions/upload-artifact@v2
+        with:
+          name: maven-coverage-data-jacoco
           path: .qodana/code-coverage
-      - name: Static analysis
-        uses: JetBrains/qodana-action@v2023.3
+
+      - name: Qodana Scan
+        uses: JetBrains/qodana-action@main
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
         with:
+          args: "-i,JVM/jacoco/maven,--linter,jetbrains/qodana-jvm:2023.3-eap"
+          pr-mode: false
           upload-result: true
