--- a/JVM/jacoco/maven/pom.xml
+++ b/JVM/jacoco/maven/pom.xml
@@ -131,7 +131,7 @@
                             <goal>report</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.basedir}/.qodana/code-coverage/</outputDirectory>
+                            <outputDirectory>../../../.qodana/code-coverage</outputDirectory>
                             <formats>XML</formats>
                             <includes>
                                 <include>org/example/**</include>
