--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -40,7 +40,12 @@ jobs:
         with:
           name: maven-coverage-data-jacoco
           path: .qodana/code-coverage
-
+      - name: My Debug
+        run: |
+          ls .qodana
+          ls .qodana/code-coverage
+          cat .qodana/code-coverage/result.xml
+    
       - name: Qodana Scan
         uses: JetBrains/qodana-action@v2023.3
         env:
